more button fixes, adding wrap hover on well

--- a/components/CharlotteArticle.module.scss
+++ b/components/CharlotteArticle.module.scss
@@ -446,6 +446,16 @@
                 width: 100%;
             }
         }
+
+        .tsI {
+            &.yLk:hover {
+                transition: all 0.1s ease-in-out;
+                -webkit-transform: scale(1.01);
+                transform: scale(1.01);
+                box-shadow: 1px 1px 10px rgb(0 0 0 / 25%);
+                z-index: 1;
+            }
+        }
     }
 
     //media queries for columns
